buildscript {
    ext.kotlin_version = '1.4.31'
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:5.2.1'
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
    repositories {
        mavenLocal()
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'maven-publish'
    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url = 'http://repo.maven.apache.org/maven2'
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    each {
//        it.options.compilerArgs.add('--enable-preview')
    }
}

dependencies {
    compile 'org.apache.commons:commons-collections4:4.1'
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    testCompile 'junit:junit:4.12'
    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
}

apply plugin: 'org.owasp.dependencycheck'
apply plugin: 'kotlin'

group = 'com.expedia.www'
version = '1.0-SNAPSHOT'
sourceCompatibility = '1.8'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

test {
//    jvmArgs '--enable-preview'
    testLogging {
        showStandardStreams = true
    }
}
jar {
    manifest {
        attributes "Main-Class": "refactor.app.RefactorUI"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
sourceSets {
    main.java.srcDirs += 'src/main/kotlin/'
    test.java.srcDirs += 'src/test/kotlin/'
}